terraform-infra/20-sg-rules/main.tf
# Rule 1: Internet to Bastion
resource "aws_security_group_rule" "bastion_internet" {
  type        = "ingress"
  description = "Allow inbound SSH traffic from Internet"

  from_port   = 22
  to_port     = 22
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]

  # Target SG ID
  security_group_id = local.bastion_sg_id
}

# Rule 2: Bastion to MongoDB
resource "aws_security_group_rule" "mongodb_from_bastion" {
  type        = "ingress"
  description = "Allow inbound SSH traffic from bastion"

  from_port = 22
  to_port   = 22
  protocol  = "tcp"

  # Source and Target SG connections
  source_security_group_id = local.bastion_sg_id
  security_group_id        = local.mongodb_sg_id
}
# Rule 3: Bastion to Redis
resource "aws_security_group_rule" "redis_from_bastion" {
  type        = "ingress"
  description = "Allow inbound SSH traffic from bastion"

  from_port = 22
  to_port   = 22
  protocol  = "tcp"

  # Source and Target SG connections
  source_security_group_id = local.bastion_sg_id
  security_group_id        = local.redis_sg_id
}
# Rule 4: Bastion to MySQL
resource "aws_security_group_rule" "mysql_from_bastion" {
  type        = "ingress"
  description = "Allow inbound SSH traffic from bastion"

  from_port = 22
  to_port   = 22
  protocol  = "tcp"

  # Source and Target SG connections
  source_security_group_id = local.bastion_sg_id
  security_group_id        = local.mysql_sg_id
}
# Rule 5: Bastion to Rabbitmq
resource "aws_security_group_rule" "rabbitmq_from_bastion" {
  type        = "ingress"
  description = "Allow inbound SSH traffic from bastion"

  from_port = 22
  to_port   = 22
  protocol  = "tcp"

  # Source and Target SG connections
  source_security_group_id = local.bastion_sg_id
  security_group_id        = local.rabbitmq_sg_id
}

# Rule 6: Catalogue to MongoDB  
resource "aws_security_group_rule" "mongodb_from_catalogue" {
  type        = "ingress"
  description = "Allow inbound custom tcp traffic from catalogue"

  from_port = 27017
  to_port   = 27017
  protocol  = "tcp"

  # Source and Target SG connections
  source_security_group_id = local.catalogue_sg_id
  security_group_id        = local.mongodb_sg_id
}

# Rule 7: User to MongoDB
resource "aws_security_group_rule" "mongodb_from_user" {
  type        = "ingress"
  description = "Allow inbound custom tcp traffic from user"

  from_port = 27017
  to_port   = 27017
  protocol  = "tcp"

  # Source and Target SG connections
  source_security_group_id = local.user_sg_id
  security_group_id        = local.mongodb_sg_id
}

# Rule 8: Bastion to Backend_alb
resource "aws_security_group_rule" "backend_alb_from_bastion" {
  type        = "ingress"
  description = "Allow inbound custom tcp traffic from user"

  from_port = 80
  to_port   = 80
  protocol  = "tcp"

  # Source and Target SG connections
  source_security_group_id = local.bastion_sg_id
  security_group_id        = local.backend_alb_sg_id
}

# Rule 9: Bastion to catalogue
resource "aws_security_group_rule" "catalogue_from_bastion" {
  type        = "ingress"
  description = "Allow inbound custom tcp traffic from user"

  from_port = 22
  to_port   = 22
  protocol  = "tcp"

  # Source and Target SG connections
  source_security_group_id = local.bastion_sg_id
  security_group_id        = local.catalogue_sg_id
}

# Rule 10: Backend_alb to catalogue
resource "aws_security_group_rule" "catalogue_from_backend_alb" {
  type        = "ingress"
  description = "Allow inbound custom tcp traffic from user"

  from_port = 8080
  to_port   = 8080
  protocol  = "tcp"

  # Source and Target SG connections
  source_security_group_id = local.catalogue_sg_id
  security_group_id        = local.backend_alb_sg_id
}
